<resources>
    <string name="app_name">OG</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="server_error">Server error</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="login_signup">Login/Signup</string>
    <string name="need_to_login">you have to login/Signup to continue</string>
    <string name="english">English</string>
    <string name="arabic">اللغة العربية</string>
    <string name="change_language">Change Language</string>
    <string name="hint_email">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">login</string>
    <string name="or_text">Or</string>
    <string name="screate_text">create account</string>
    <string name="Self">Self. Gratitude. Journal</string>
    <string name="greateful_text">What are grateful for today?</string>
    <string name="get_started_text">Get Started</string>
    <string name="username_hint">username</string>
    <string name="menu_tittle">Add Thoughts</string>
    <string name="signout">Sign out</string>
    <string name="write_a_journal_entry_by_clicking_the_sign">Write a Journal Entry by clicking the sign</string>
    <string name="add_image">Add</string>
    <string name="name_hint_create">Name</string>
    <string name="today">today</string>
    <string name="your_thouths">Your Thoughts</string>
    <string name="title">title</string>
    <string name="date_created">Date_created</string>


</resources>
