<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".UI.Login.View.LoginActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/email_login_form">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:id="@+id/email"
            android:hint="@string/hint_email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EmailSignInButton"
            android:textColor="@color/colorWhite"
            android:text="@string/login_text"
            android:background="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CreateAcctButton"
            android:textColor="@color/colorWhite"
            android:text="@string/screate_text"
            android:background="@color/colorAccent"
            android:textStyle="bold"
            />

    </LinearLayout>
</LinearLayout>