<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".UI.Main.View.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Self"
        android:fontFamily="@font/roboto_slab_bold"
        android:textSize="30sp"
        android:id="@+id/title" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal">
        
        
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/gratefulText"
                android:text="@string/greateful_text"
                android:textSize="19sp"
                />
            
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startButton"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:text="@string/get_started_text"/>

</LinearLayout>