<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.PostJournal.View.PostJournalActivity">

    <EditText
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:id="@+id/postDescriptionET"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/your_thouths"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postTitleEditText" />

    <ImageView
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:id="@+id/post_imageView"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        android:src="@drawable/color_button" />

    <TextView
        android:id="@+id/postUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_hint_create"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/postTitleEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <TextView
        android:id="@+id/postDataTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/today"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postUsernameTextView" />

    <ImageView
        android:id="@+id/postCameraButton"
        android:layout_width="77dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_imageView"
        app:layout_constraintEnd_toEndOf="@+id/post_imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_imageView"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:id="@+id/postTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_hint_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_imageView" />

    <ProgressBar
        android:id="@+id/posrProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postDescriptionET"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/postSveJournalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/add_image"
        style="@style/buttonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posrProgressBar"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>